angular new features.

--- a/src/index.html
+++ b/src/index.html
@@ -9,10 +9,14 @@
   <meta name="google-site-verification" content="nD2RO6G7T9qQ79pKZX9rGQb6VNg7-tdbw34272Qg5Kc" />
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+
 </head>
 
 <body>
   <app-root></app-root>
 </body>
+
+<link  rel="stylesheet" href="//cdn.jsdelivr.net/npm/highlightjs-themes@1.0.0/agate.css">
+<script async src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.12.0/highlight.min.js"></script>
 
 </html>
